fix color issue

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,7 +45,9 @@
       1,
       {
         "extensions": [
-          ".tsx"
+          ".tsx",
+          ".js",
+          ".jsx"
         ]
       }
     ],
